--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -34,5 +34,29 @@
   }
   to {
     transform: rotate(360deg);
+  }
+} */
+
+
+
+body{
+  inset: 0px;
+  z-index: -10;
+  height: 100%;
+  width: 100%;
+  background: radial-gradient(125% 125% at 50% 10%,#000 40%,#63e 100%);
+  align-items: center;
+  background-attachment: fixed;
+}
+
+@media (max-width: 1050px) {
+  html, body {
+    height: 200%;
+  }
+
+  body {
+    background: radial-gradient(125% 125% at 50% 10%, #000 40%, #63e 100%);
+    background-size: cover;
+    background-attachment: fixed;
   }
 }
