--- a/src/Sections/Skills/style/Skills.module.css
+++ b/src/Sections/Skills/style/Skills.module.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 10rem;
+    margin-top: 5rem;
 }
 
 .skillBox h1{
@@ -131,12 +131,18 @@
     .imageBox p {
         font-size: 0.9rem;
     }
+    .skillBox h1{
+        font-size: 3rem;
+    }
 }
 
 @media (max-width: 768px) {
     .skillImages {
         grid-template-columns: repeat(3, 1fr); /* 3 items per row */
         gap: 3rem;
+    }
+    .skillBox h1{
+        font-size: 2.8rem;
     }
 }
 
